--- a/index.html
+++ b/index.html
@@ -30,23 +30,16 @@
         <div class="sensor">
           <h2>Lamp Control</h2>
           <div class="data-lampu">
-            <div>
-              <img
-                id="lamp_on1"
-                src="img/lamp-on.png"
-                style="display: none"
-                width="150"
-                alt=""
-              />
-              <img id="lamp_off1" src="img/lamp-off.png" width="150" alt="" />
-            </div>
-            <div class="toggle-container">
-              <label class="switch">
-                <input type="checkbox" id="toggleSwitch1" disabled />
-                <span class="slider"></span>
-              </label>
-              <p id="toggleText1">OFF</p>
-            </div>
+           <div>
+          <div class="toggle-container-2">
+            <p id="manualText">OFF</p>
+            <label class="switch-2">
+              <input type="checkbox" id="toggleAuto" checked />
+              <span class="slider-2"></span>
+            </label>
+            <p id="autoText">ON</p>
+          </div>
+        </div>
           </div>
           <div class="data-lampu">
             <div>
