--- a/index.html
+++ b/index.html
@@ -17,9 +17,12 @@
       <div>
         <div class="toggle-container-2">
           <p id="manualText">Manual</p>
-          <button class="switch-2" id="toggleAuto" onclick="toggleAuto()">Auto</button>
+          <label class="switch-2">
+            <input type="checkbox" id="toggleAuto" checked />
+            <span class="slider-2"></span>
+          </label>
+          <p id="autoText">Auto</p>
         </div>
-      </div>
     </div>
 
     <div class="myapp">
