--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
       <div>
         <div class="toggle-container-2">
           <p id="manualText">Manual</p>
-          <label class="switch-2">
-            <input type="checkbox" id="toggleAuto" checked />
-            <span class="slider-2"></span>
-          </label>
-          <p id="autoText">Auto</p>
+          <button class="switch-2" id="toggleAuto" onclick="toggleAuto()">Auto</button>
         </div>
+      </div>
     </div>
 
     <div class="myapp">
