--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
         <img src="img/favicon.png" height="25" alt="" />
         <div>Lamp Control</div>
       </div>
-      <div>
-        <div class="toggle-container-2">
-          <p id="manualText">Manual</p>
-          <button class="switch-2" id="toggleAuto" onclick="toggleAuto()">Auto</button>
-        </div>
-      </div>
+    <div>
+            <img
+              id="lamp_on1"
+              src="img/lamp-on.png"
+              style="display: none"
+              width="150"
+              alt="MANUAL"
+            />
+            <img id="lamp_off1" src="img/lamp-off.png" width="150" alt="AUTO" />
+          </div>
     </div>
 
     <div class="myapp">
