--- a/index.html
+++ b/index.html
@@ -5,6 +5,72 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Tambahkan gaya khusus untuk menyesuaikan tampilan switcher */
+    .switcher {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+    }
+
+    .switcher input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+      border-radius: 34px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+
+    /* Gaya tambahan sesuai kebutuhan Anda */
+    .toggle-container-2 {
+      display: flex;
+      align-items: center;
+    }
+
+    #manualText, #autoText {
+      margin: 0;
+      margin-right: 10px;
+    }
+  </style>
   <title>Lamp Control</title>
 </head>
 <body>
@@ -17,7 +83,11 @@
       <div>
         <div class="toggle-container-2">
           <p id="manualText">Manual</p>
-          <input type="range" min="0" max="1" step="1" value="1" id="manualSlider" onchange="toggleAuto()">
+          <label class="switcher">
+            <input type="checkbox" id="toggleAuto" onclick="toggleAuto()">
+            <span class="slider"></span>
+          </label>
+          <p id="autoText">Auto</p>
         </div>
       </div>
     </div>
@@ -26,50 +96,26 @@
       <div class="sensor">
         <h2>Lamp Control</h2>
         <div class="data-lampu">
-          <div>
-            <img
-              id="lamp_on1"
-              src="img/lamp-on.png"
-              style="display: none"
-              width="150"
-              alt=""
-            />
-            <img id="lamp_off1" src="img/lamp-off.png" width="150" alt="" />
-          </div>
+          <!-- Sisipkan elemen switcher untuk setiap lampu -->
           <div class="toggle-container">
-            <button class="switch" id="toggleSwitch1" onclick="toggleSwitch(1)"></button>
+            <label class="switcher">
+              <input type="checkbox" id="toggleSwitch1" onclick="toggleSwitch(1)">
+              <span class="slider"></span>
+            </label>
             <p id="toggleText1">OFF</p>
           </div>
-        </div>
-        <div class="data-lampu">
-          <div>
-            <img
-              id="lamp_on2"
-              src="img/lamp-on.png"
-              style="display: none"
-              width="150"
-              alt=""
-            />
-            <img id="lamp_off2" src="img/lamp-off.png" width="150" alt="" />
-          </div>
           <div class="toggle-container">
-            <button class="switch" id="toggleSwitch2" onclick="toggleSwitch(2)"></button>
+            <label class="switcher">
+              <input type="checkbox" id="toggleSwitch2" onclick="toggleSwitch(2)">
+              <span class="slider"></span>
+            </label>
             <p id="toggleText2">OFF</p>
           </div>
-        </div>
-        <div class="data-lampu">
-          <div>
-            <img
-              id="lamp_on3"
-              src="img/lamp-on.png"
-              style="display: none"
-              width="150"
-              alt=""
-            />
-            <img id="lamp_off3" src="img/lamp-off.png" width="150" alt="" />
-          </div>
           <div class="toggle-container">
-            <button class="switch" id="toggleSwitch3" onclick="toggleSwitch(3)"></button>
+            <label class="switcher">
+              <input type="checkbox" id="toggleSwitch3" onclick="toggleSwitch(3)">
+              <span class="slider"></span>
+            </label>
             <p id="toggleText3">OFF</p>
           </div>
         </div>
@@ -82,29 +128,27 @@
   <script>
     function toggleSwitch(switchNumber) {
       const switchElement = document.getElementById(`toggleSwitch${switchNumber}`);
-      const checked = switchElement.classList.contains('on');
+      const checked = switchElement.checked;
 
-      switchElement.classList.toggle('on', !checked);
-      switchElement.classList.toggle('off', checked);
-
+      // Handle your logic for switch state
       const lampOnElement = document.getElementById(`lamp_on${switchNumber}`);
       const lampOffElement = document.getElementById(`lamp_off${switchNumber}`);
 
       lampOnElement.style.display = checked ? 'none' : 'block';
       lampOffElement.style.display = checked ? 'block' : 'none';
 
-      // Send MQTT message based on button state
+      // Send MQTT message based on switch state
       const message = new Paho.MQTT.Message(checked ? '1' : '0');
       message.destinationName = 'traffic/raspico-2'; // Assuming this topic is correct
       client.send(message);
     }
 
     function toggleAuto() {
-      const manualSlider = document.getElementById('manualSlider');
-      const value = manualSlider.value;
-      
-      // Add your logic for handling Manual slider here
-      console.log('Manual Slider Value:', value);
+      const toggleAutoElement = document.getElementById('toggleAuto');
+      const checked = toggleAutoElement.checked;
+
+      // Add your logic for handling Auto toggle here
+      console.log('Auto Toggle State:', checked);
     }
   </script>
 </body>
