--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         <div class="data-lampu">
           <!-- Sisipkan elemen switcher untuk setiap lampu -->
           <div class="toggle-container">
+            <p id="toggleText1">ON</p>
             <label class="switcher">
               <input type="checkbox" id="toggleSwitch1" onclick="toggleSwitch(1)">
               <span class="slider"></span>
@@ -105,6 +106,7 @@
             <p id="toggleText1">OFF</p>
           </div>
           <div class="toggle-container">
+             <p id="toggleText1">ON</p>
             <label class="switcher">
               <input type="checkbox" id="toggleSwitch2" onclick="toggleSwitch(2)">
               <span class="slider"></span>
@@ -112,6 +114,7 @@
             <p id="toggleText2">OFF</p>
           </div>
           <div class="toggle-container">
+             <p id="toggleText1">ON</p>
             <label class="switcher">
               <input type="checkbox" id="toggleSwitch3" onclick="toggleSwitch(3)">
               <span class="slider"></span>
