--- a/index.html
+++ b/index.html
@@ -97,29 +97,32 @@
         <h2>Lamp Control</h2>
         <div class="data-lampu">
           <!-- Sisipkan elemen switcher untuk setiap lampu -->
+          <h3> MERAH </h3>
           <div class="toggle-container">
-            <p id="toggleText1">ON</p>
+            <p id="toggleText1">OFF</p>
             <label class="switcher">
               <input type="checkbox" id="toggleSwitch1" onclick="toggleSwitch(1)">
               <span class="slider"></span>
             </label>
-            <p id="toggleText1">OFF</p>
+            <p id="toggleText1">ON</p>
           </div>
+           <h3> MERAH </h3>
           <div class="toggle-container">
-             <p id="toggleText1">ON</p>
+             <p id="toggleText1">OFF</p>
             <label class="switcher">
               <input type="checkbox" id="toggleSwitch2" onclick="toggleSwitch(2)">
               <span class="slider"></span>
             </label>
-            <p id="toggleText2">OFF</p>
+            <p id="toggleText2">ON</p>
           </div>
+           <h3> MERAH </h3>
           <div class="toggle-container">
-             <p id="toggleText1">ON</p>
+             <p id="toggleText1">OFF</p>
             <label class="switcher">
               <input type="checkbox" id="toggleSwitch3" onclick="toggleSwitch(3)">
               <span class="slider"></span>
             </label>
-            <p id="toggleText3">OFF</p>
+            <p id="toggleText3">ON</p>
           </div>
         </div>
       </div>
