--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </label>
             <p id="toggleText1">ON</p>
           </div>
-           <h3> MERAH </h3>
+           <h3> KUNING </h3>
           <div class="toggle-container">
              <p id="toggleText1">OFF</p>
             <label class="switcher">
@@ -115,7 +115,7 @@
             </label>
             <p id="toggleText2">ON</p>
           </div>
-           <h3> MERAH </h3>
+           <h3> HIJAU </h3>
           <div class="toggle-container">
              <p id="toggleText1">OFF</p>
             <label class="switcher">
