--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="myheader">
       <div class="logo">
         <img src="img/favicon.png" height="25" alt="" />
-        <div>Lamp Control</div>
+        <div>TRAFFIC LIGHT CONTROL</div>
       </div>
       <div>
         <div class="toggle-container-2">
