--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="myheader">
       <div class="logo">
         <img src="img/favicon.png" height="25" alt="" />
-        <div>TRAFFIC LIGHT CONTROL</div>
+        <div>TRAFFIC LIGHT</div>
       </div>
       <div>
         <div class="toggle-container-2">
@@ -94,7 +94,7 @@
 
     <div class="myapp">
       <div class="sensor">
-        <h2>Lamp Control</h2>
+        <h2>Trafic Light Control</h2>
         <div class="data-lampu">
           <!-- Sisipkan elemen switcher untuk setiap lampu -->
           <h3> MERAH </h3>
