--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             </label>
             <p id="toggleText1">ON</p>
           </div>
-           <h3> KUNING </h3>
+           <h3 color='yellow'> KUNING </h3>
           <div class="toggle-container">
              <p id="toggleText1">OFF</p>
             <label class="switcher">
