--- a/index.html
+++ b/index.html
@@ -1,96 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Lamp Control</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="myheader">
-        <div class="logo">
-          <img src="img/favicon.png" height="25" alt="" />
-          <div>Lamp Control</div>
-        </div>
-        <div>
-          <div class="toggle-container-2">
-            <p id="manualText">Manual</p>
-            <label class="switch-2">
-              <input type="checkbox" id="toggleAuto" checked />
-              <span class="slider-2"></span>
-            </label>
-            <p id="autoText">Auto</p>
-          </div>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      margin: 20px;
+    }
 
-      <div class="myapp">
-        <div class="sensor">
-          <h2>Lamp Control</h2>
-          <div class="data-lampu">
-            <div>
-              <img
-                id="lamp_on1"
-                src="img/lamp-on.png"
-                style="display: none"
-                width="150"
-                alt=""
-              />
-              <img id="lamp_off1" src="img/lamp-off.png" width="150" alt="" />
-            </div>
-            <div class="toggle-container">
-              <label class="switch">
-                <input type="checkbox" id="toggleSwitch1" disabled />
-                <span class="slider"></span>
-              </label>
-              <p id="toggleText1">OFF</p>
-            </div>
-          </div>
-          <div class="data-lampu">
-            <div>
-              <img
-                id="lamp_on2"
-                src="img/lamp-on.png"
-                style="display: none"
-                width="150"
-                alt=""
-              />
-              <img id="lamp_off2" src="img/lamp-off.png" width="150" alt="" />
-            </div>
-            <div class="toggle-container">
-              <label class="switch">
-                <input type="checkbox" id="toggleSwitch2" disabled />
-                <span class="slider"></span>
-              </label>
-              <p id="toggleText2">OFF</p>
-            </div>
-          </div>
-          <div class="data-lampu">
-            <div>
-              <img
-                id="lamp_on3"
-                src="img/lamp-on.png"
-                style="display: none"
-                width="150"
-                alt=""
-              />
-              <img id="lamp_off3" src="img/lamp-off.png" width="150" alt="" />
-            </div>
-            <div class="toggle-container">
-              <label class="switch">
-                <input type="checkbox" id="toggleSwitch3" disabled />
-                <span class="slider"></span>
-              </label>
-              <p id="toggleText3">OFF</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    h1 {
+      color: #333;
+    }
 
-    <script src="mqttws31.js"></script>
-    <script src="app.js"></script>
-  </body>
+    .lamp-button {
+      display: inline-block;
+      width: 100px;
+      height: 40px;
+      margin: 10px;
+      cursor: pointer;
+      border: 2px solid #333;
+      border-radius: 5px;
+      background-color: #eee;
+      color: #333;
+      font-size: 16px;
+      line-height: 40px;
+    }
+
+    .lamp-on {
+      background-color: #4CAF50;
+      color: #fff;
+    }
+  </style>
+  <title>Lamp Control</title>
+</head>
+<body>
+  <h1>Lamp Control</h1>
+
+  <div class="lamp-button" id="lampButton1" onclick="toggleLamp(1)">Lamp 1</div>
+  <div class="lamp-button" id="lampButton2" onclick="toggleLamp(2)">Lamp 2</div>
+  <div class="lamp-button" id="lampButton3" onclick="toggleLamp(3)">Lamp 3</div>
+
+  <script>
+    function toggleLamp(lampNumber) {
+      const lampButton = document.getElementById(`lampButton${lampNumber}`);
+
+      // Send MQTT message based on button state
+      const message = new Paho.MQTT.Message("0");
+      message.destinationName = `traffic/raspico-${lampNumber}`;
+      client.send(message);
+
+      // Update button style based on state
+      if (lampButton.classList.contains("lamp-on")) {
+        lampButton.classList.remove("lamp-on");
+      } else {
+        lampButton.classList.add("lamp-on");
+      }
+    }
+  </script>
+
+  <script src="mqttws31.js"></script>
+  <script>
+    // Your MQTT connection logic here
+  </script>
+</body>
 </html>
