--- a/index.html
+++ b/index.html
@@ -1,96 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Lamp Control</title>
-  </head>
-  <body>
-    <div class="container">
-      <div class="myheader">
-        <div class="logo">
-          <img src="img/favicon.png" height="25" alt="" />
-          <div>Lamp Control</div>
-        </div>
-        <div>
-          <div class="toggle-container-2">
-            <p id="manualText">Manual</p>
-            <label class="switch-2">
-              <input type="checkbox" id="toggleAuto" checked />
-              <span class="slider-2"></span>
-            </label>
-            <p id="autoText">Auto</p>
-          </div>
-        </div>
-      </div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Tambahkan gaya khusus untuk menyesuaikan tampilan switcher */
+    .switcher {
+      position: relative;
+      display: inline-block;
+      width: 60px;
+      height: 34px;
+    }
 
-      <div class="myapp">
-        <div class="sensor">
-          <h2>Lamp Control</h2>
-          <div class="data-lampu">
-            <div>
-              <img
-                id="lamp_on1"
-                src="img/lamp-on.png"
-                style="display: none"
-                width="150"
-                alt=""
-              />
-              <img id="lamp_off1" src="img/lamp-off.png" width="150" alt="" />
-            </div>
-            <div class="toggle-container">
-              <label class="switch">
-                <input type="checkbox" id="toggleSwitch1" disabled />
-                <span class="slider"></span>
-              </label>
-              <p id="toggleText1">OFF</p>
-            </div>
-          </div>
-          <div class="data-lampu">
-            <div>
-              <img
-                id="lamp_on2"
-                src="img/lamp-on.png"
-                style="display: none"
-                width="150"
-                alt=""
-              />
-              <img id="lamp_off2" src="img/lamp-off.png" width="150" alt="" />
-            </div>
-            <div class="toggle-container">
-              <label class="switch">
-                <input type="checkbox" id="toggleSwitch2" disabled />
-                <span class="slider"></span>
-              </label>
-              <p id="toggleText2">OFF</p>
-            </div>
-          </div>
-          <div class="data-lampu">
-            <div>
-              <img
-                id="lamp_on3"
-                src="img/lamp-on.png"
-                style="display: none"
-                width="150"
-                alt=""
-              />
-              <img id="lamp_off3" src="img/lamp-off.png" width="150" alt="" />
-            </div>
-            <div class="toggle-container">
-              <label class="switch">
-                <input type="checkbox" id="toggleSwitch3" disabled />
-                <span class="slider"></span>
-              </label>
-              <p id="toggleText3">OFF</p>
-            </div>
-          </div>
+    .switcher input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      -webkit-transition: .4s;
+      transition: .4s;
+      border-radius: 34px;
+    }
+
+    .slider:before {
+      position: absolute;
+      content: "";
+      height: 26px;
+      width: 26px;
+      left: 4px;
+      bottom: 4px;
+      background-color: white;
+      -webkit-transition: .4s;
+      transition: .4s;
+      border-radius: 50%;
+    }
+
+    input:checked + .slider {
+      background-color: #2196F3;
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px #2196F3;
+    }
+
+    input:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+
+    /* Gaya tambahan sesuai kebutuhan Anda */
+    .toggle-container-2 {
+      display: flex;
+      align-items: center;
+    }
+
+    #manualText, #autoText {
+      margin: 0;
+      margin-right: 10px;
+    }
+  </style>
+  <title>Lamp Control</title>
+</head>
+<body>
+  <div class="container">
+    <div class="myheader">
+      <div class="logo">
+        <img src="img/favicon.png" height="25" alt="" />
+        <div>TRAFFIC LIGHT</div>
+      </div>
+      <div>
+        <div class="toggle-container-2">
+          <p id="manualText">Manual</p>
+          <label class="switcher">
+            <input type="checkbox" id="toggleAuto" onclick="toggleAuto()">
+            <span class="slider"></span>
+          </label>
+          <p id="autoText">Auto</p>
         </div>
       </div>
     </div>
 
-    <script src="mqttws31.js"></script>
-    <script src="app.js"></script>
-  </body>
-</html>
+    <div class="myapp">
+      <div class="sensor">
+        <h2>Trafic Light Control</h2>
+        <div class="data-lampu">
+          <!-- Sisipkan elemen switcher untuk setiap lampu -->
+          <h3> MERAH </h3>
+          <div class="toggle-container">
+            <p id="toggleText1">OFF</p>
+            <label class="switcher">
+              <input type="checkbox" id="toggleSwitch1">
+              <span class="slider"></span>
+            </label>
+            <p id="toggleText1">ON</p>
+          </div>
+           <h3> KUNING </h3>
+          <div class="toggle-container">
+             <p id="toggleText2">OFF</p>
+            <label class="switcher">
+              <input type="checkbox" id="toggleSwitch2">
+              <span class="slider"></span>
+            </label>
+            <p id="toggleText2">ON</p>
+          </div>
+           <h3> HIJAU </h3>
+          <div class="toggle-container">
+             <p id="toggleText3">OFF</p>
+            <label class="switcher">
+              <input type="checkbox" id="toggleSwitch3">
+              <span class="slider"></span>
+            </label>
+            <p id="toggleText3">ON</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+<script src="mqttws31.js"></script>
+  <script src="app.js"></script>
+  <script>
+    function toggleSwitch(switchNumber) {
+      const switchElement = document.getElementById(toggleSwitch${switchNumber});
+      const checked = switchElement.checked;
+
+      // Handle your logic for switch state
+      const lampOnElement = document.getElementById(lamp_on${switchNumber});
+      const lampOffElement = document.getElementById(lamp_off${switchNumber});
+
+      lampOnElement.style.display = checked ? 'none' : 'block';
+      lampOffElement.style.display = checked ? 'block' : 'none';
+
+      // Send MQTT message based on switch state
+      const message = new Paho.MQTT.Message(checked ? '1' : '0');
+      message.destinationName = 'traffic/raspico-2'; // Assuming this topic is correct
+      client.send(message);
+    }
+
+    function toggleAuto() {
+      const toggleAutoElement = document.getElementById('toggleAuto');
+      const checked = toggleAutoElement.checked;
+
+      // Add your logic for handling Auto toggle here
+      console.log('Auto Toggle State:', checked);
+    }
+  </script>
+</body>
+  </html>
